[package]
name = "http2cli"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "http2cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.6"
tokio = { version = "1", features = ["full"] }
percent-encoding = "2.3.1"
